[gd_scene load_steps=4 format=3 uid="uid://b1r068wojs3es"]

[ext_resource type="Script" uid="uid://c2jpp32mckrhm" path="res://Assets/Scripts/pause_menu.gd" id="1_jbhf4"]
[ext_resource type="FontFile" uid="uid://ck2ml0wud68ix" path="res://Assets/Fonts/PublicPixel.otf" id="3_kvkuv"]
[ext_resource type="Texture2D" uid="uid://b4xapx23jch0t" path="res://Assets/Sprites/Icons Menu/Volume.png" id="4_kvkuv"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jbhf4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -342.0
offset_top = 75.0
offset_right = 345.0
offset_bottom = 269.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_kvkuv")
theme_override_font_sizes/font_size = 128
text = "PAUSE"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 409.0
offset_top = 263.0
offset_right = 577.0
offset_bottom = 391.0
scale = Vector2(2, 2)
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kvkuv")
theme_override_font_sizes/font_size = 16
text = "RESUME"

[node name="StartMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kvkuv")
theme_override_font_sizes/font_size = 16
text = "START MENU"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kvkuv")
theme_override_font_sizes/font_size = 16
text = "QUIT"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 449.125
offset_top = 498.0
offset_right = 780.125
offset_bottom = 568.0
max_value = 1.0
step = 0.05

[node name="Volume" type="Sprite2D" parent="."]
position = Vector2(405.125, 534)
scale = Vector2(3.25, 3.09091)
texture = ExtResource("4_kvkuv")
